fix tweetcard header word wrap

--- a/src/components/TweetCard/index.module.scss
+++ b/src/components/TweetCard/index.module.scss
@@ -29,10 +29,14 @@
 		height: 20px;
 		font-size: 14px;
 		margin-bottom: 1px;
+		max-width: calc(100% - 50px);
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
 		.name {
 			color: $tBlack;
 			font-size: 14px;
-		    font-family: $tFontBold;
+			font-family: $tFontBold;
 			margin-right: 4px;
 		}
 	}
